--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -183,6 +183,14 @@ header{
     border-radius: 5px;
     left: 10%;
 }
+.backdrop{
+    background: #30303087;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 900;
+}
 
 .header-modal{
     display: flex;
@@ -215,7 +223,7 @@ header{
     margin-left: 1rem;
 }
 .empty{
-    margin-top: 15%;
+    margin-top: 6%;
 }
 .post-container{
     background: white;
